# OpenRightOfWay

./: .gitignore  AGENTS.md  README.md  WARP.md  pyproject.toml  tox.ini
configs/: settings.yaml
src/openrightofway/: __init__.py  cli.py
src/openrightofway/alerts/: __init__.py  notifier.py
src/openrightofway/compliance/: __init__.py  checks.py
src/openrightofway/core/: __init__.py  config.py
src/openrightofway/cv/: __init__.py  change_detection.py
src/openrightofway/geospatial/: __init__.py  geo.py
src/openrightofway/integrations/: __init__.py  work_orders.py
src/openrightofway/llm/: __init__.py  openai_agent.py
src/openrightofway/ml/: __init__.py  filter.py
src/openrightofway/scoring/: __init__.py  threat.py
src/openrightofway/utils/: __init__.py  logging.py
tests/: test_change_detection.py  test_cli.py  test_cli_datasette.py  test_cli_llm_summary.py  test_ml_filter.py  test_scoring.py
